[gd_scene load_steps=8 format=3 uid="uid://wwd6oupme0m"]

[ext_resource type="Script" uid="uid://d2qs250wsmol2" path="res://scripts/Menus/menu_touches.gd" id="1_3k3n8"]
[ext_resource type="Script" uid="uid://2fboxjeho0mu" path="res://scripts/Menus/btn_back.gd" id="2_ips03"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h1g31"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qldvp"]
bg_color = Color(0.0361008, 0.0361009, 0.0361008, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 13.0
expand_margin_top = 2.0
expand_margin_right = 13.0
expand_margin_bottom = 2.0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sg86w"]
bg_color = Color(0.062622, 0.062622, 0.0626219, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_top = 1.0
expand_margin_right = 10.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gn0ho"]
bg_color = Color(0.062622, 0.062622, 0.0626219, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 18.0
expand_margin_top = 2.0
expand_margin_right = 18.0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 2

[sub_resource type="Theme" id="Theme_8va7c"]
default_font_size = 25
Button/font_sizes/font_size = 50
Button/styles/focus = SubResource("StyleBoxEmpty_h1g31")
Button/styles/hover = SubResource("StyleBoxFlat_qldvp")
Button/styles/normal = SubResource("StyleBoxFlat_sg86w")
Button/styles/pressed = SubResource("StyleBoxFlat_gn0ho")

[node name="Menu Touches" type="CanvasLayer"]
script = ExtResource("1_3k3n8")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ListeActions" type="VBoxContainer" parent="Root"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Root"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_8va7c")
theme_override_constants/separation = 110
alignment = 1

[node name="BtnBack" type="Button" parent="Root/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Retour"
script = ExtResource("2_ips03")
metadata/_custom_type_script = "uid://2fboxjeho0mu"

[node name="btn_reinitialiser" type="Button" parent="Root/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reinitialiser"

[node name="btn_appliquer" type="Button" parent="Root/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Appliquer"
